<resources>
    <string name="app_name">MyCups</string>
    <string name="app_license">Copyright@RaanTech Company</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>
    <string name="select_language">Select Language</string>
    <string name="select_your_preferred_language">Select your preferred language!</string>
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant storage permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>
    <string name="alert_dialog_title">MyCups</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="km">km</string>
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="you_need_to_login_into_your_account_to_see_this_content">You need to login into your account\nto see this content</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_not_be_at_least">must not be at least </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 07xxxxxxx)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="travllers">Travellers</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select time</string>
    <string name="adult">Adult</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_mycups">There’s a new update available for\nMyCups</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>
    <string name="completed_successfully">Completed Successfully</string>
    <string name="continue_">Continue</string>
    <string name="please_choose_your_preferred_language">Please choose your preferred language!</string>
    <string name="title_on_boarding_1">title_on_boarding_1</string>
    <string name="description_on_boarding_1">description_on_boarding_1</string>
    <string name="title_on_boarding_2">title_on_boarding_2</string>
    <string name="description_on_boarding_2">description_on_boarding_2</string>
    <string name="title_on_boarding_3">title_on_boarding_3</string>
    <string name="description_on_boarding_3">description_on_boarding_3</string>
    <string name="title_on_boarding_4">title_on_boarding_4</string>
    <string name="description_on_boarding_4">description_on_boarding_4</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="enter_your_email_and_well_send_you_a_link_to_create_a_new_password">Enter your email and we’ll send you a link to create a new password</string>
    <string name="you_successfully_changed_your_password_nuse_the_new_password_to_log_in_to_your_account">You successfully changed your password.\nUse the new password to log in to your account.</string>
    <string name="we_just_sent_a_confirmation_link_to_your_email_follow_the_link_to_create_your_new_password">We just sent a confirmation link to your email, Follow the link to create your new password.</string>
    <string name="success">Success!</string>
    <string name="check_your_email">Check your email!</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_your_password_">Change your password?</string>
    <string name="enter_a_new_password_below">Enter a new password below</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter your password</string>
    <string name="reset_your_password_">Reset Your Password</string>
    <string name="change_password">Change Password</string>
    <string name="email_address">Email Address</string>
    <string name="send_again">Send again</string>
    <string name="didn_t_receive_the_code">Didn\'t receive your code?</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="enter_the_four_digit_code_sent_to_your_mobile_number">Enter the four-digit code sent to your mobile number</string>
    <string name="enter_the_verification_code_we_sent_to_your">Enter the verification code we sent to your</string>
    <string name="verify">Verify</string>
    <string name="login">Login</string>
    <string name="resend_code">Resend Code</string>
    <string name="welcome_">Welcome</string>
    <string name="log_in_explore_all_the_genuine_products_and_get_deliver_to_your_doorstep">Log in Explore all the genuine products and get deliver to your doorstep.</string>
    <string name="forget_password_">Forget Password?</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="activate_account">Activate account</string>
    <string name="register_info">Register information</string>
    <string name="google_login">Continue with Google</string>
    <string name="email_login">Continue with Email</string>
    <string name="failed_to_login_with_your_account">Failed to login with your account</string>
    <string name="you_have_to_login">You have to login!</string>
    <string name="you_can_t_see_the_business_details_you_have_to_login_first">You can’t see the business details, you have to login first.</string>
    <string name="skip">Skip</string>
    <string name="no_results">No Results</string>
    <string name="search">Search</string>
    <string name="search_hint">Search ...</string>
    <string name="select_countries">Select Country</string>
    <string name="please_select_country">Please select country</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_up_for_explore_all_the_genuine_products_and_get_deliver_to_your_doorstep">Sign up for Explore all the genuine products and get deliver to your doorstep.</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number_optional">Mobile Number</string>
    <string name="by_joining_you_are_agree_to_our">By joining you are agree to our</string>
    <string name="by_signing_up_i_agree_to_the">By signing up I agree to the</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="and">and</string>
    <string name="phone_verified">Phone verified</string>
    <string name="congratulations_your_phone_number_has_been_verified_you_can_now_start_using_the_app">Congratulations, your phone number has been verified. You can now start using the app.</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up">Sign up</string>
    <string name="thousands_of_business_nwaiting_for_you">Thousands of business\nwaiting for you</string>
    <string name="_700000000">xxxxxxxxx</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_up_to_mycups">Sign up to MyCups</string>
    <string name="enter_the_5_digits_code_sent_to">Enter the 5 digits code sent to</string>
    <string name="didn_t_receive_the_sms">Didn’t receive the SMS?</string>
    <string name="we_ve_sent_a_5_digit_code_to_your_phone_number_please_enter_the_verification_code">We’ve sent a 5 digit code to your phone number. Please enter the verification code.</string>
    <string name="request_new_code_in">Request new code in</string>
    <string name="forget_password">Forget Password</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <string name="login_now">Login Now</string>
    <string name="you_need_to_login_to_see_this_screen_s_content">You need to login to see this screen’s\ncontent.</string>
    <string name="do_you_have_a_problem_with_the_application_the_work_mechanism_or_any_comments_do_not_hesitate_to_send_them_to_us">Do you have a problem with the application, the work mechanism, or any comments, do not hesitate to send them to us</string>
    <string name="problem_title">Problem title</string>
    <string name="problem_description">Problem description</string>
    <string name="write_here">Write here..</string>
    <string name="attachments_if_any">Attachments, if any</string>
    <string name="attachments">Attachments</string>
</resources>