<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_nav_favorites_selector"
        android:title="@string/nav_favorites" />

    <item
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chats_selector"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_selector"
        android:title="@string/nav_profile" />

</menu>