<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_210sdp"
                android:layout_height="@dimen/_210sdp"
                android:src="@drawable/ic_recover_success" />

            <com.technzone.bai3.ui.base.views.AppTextView
                style="@style/textview_normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/success"
                android:textColor="@color/night_blue"
                android:textSize="@dimen/_21ssp" />

            <com.technzone.bai3.ui.base.views.AppTextView
                style="@style/textview_normal_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/you_successfully_changed_your_password_nuse_the_new_password_to_log_in_to_your_account"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_25sdp"
            android:text="@string/login" />

    </RelativeLayout>
</layout>
