<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:src="@drawable/ic_verified_success" />

        <com.technzone.bai3.ui.base.views.appviews.AppTextView
            style="@style/textview_normal_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/phone_verified"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_24ssp" />

        <com.technzone.bai3.ui.base.views.appviews.AppTextView
            style="@style/textview_normal_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/subtitle_color"
            android:text="@string/congratulations_your_phone_number_has_been_verified_you_can_now_start_using_the_app"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:text="@string/continue_"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</layout>
