<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.technzone.baseapp.ui.auth.forgetpassword.viewmodels.ForgetPasswordViewModel" />
    </data>


    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnContinue"
            android:layout_marginTop="@dimen/_60sdp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.technzone.baseapp.ui.base.views.AppTextView
                    android:id="@+id/tvHeader"
                    style="@style/textview_normal_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_17sdp"
                    android:text="@string/change_your_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_21ssp" />

                <com.technzone.baseapp.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/enter_a_new_password_below"
                    android:textColor="@color/black_alpha"
                    android:textSize="@dimen/_11ssp" />

                <com.technzone.baseapp.ui.base.views.AppTextInputLayout
                    android:id="@+id/tfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/new_password"
                    app:passwordToggleEnabled="true">

                    <com.technzone.baseapp.ui.base.views.AppTextInputEditText
                        android:id="@+id/edPassword"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.passwordMutableLiveData}"
                        android:textSize="@dimen/_10ssp" />

                </com.technzone.baseapp.ui.base.views.AppTextInputLayout>

                <com.technzone.baseapp.ui.base.views.AppTextInputLayout
                    android:id="@+id/tfConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/confirm_password"
                    app:passwordToggleEnabled="true">

                    <com.technzone.baseapp.ui.base.views.AppTextInputEditText
                        android:id="@+id/edConfirmPassword"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.confirmPasswordMutableLiveData}"
                        android:textSize="@dimen/_10ssp" />

                </com.technzone.baseapp.ui.base.views.AppTextInputLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_25sdp"
            android:text="@string/change_password" />
    </RelativeLayout>

</layout>